# data_ingeneering

./: .gitignore  .gitignore.save  README.md  creds.py  data_loader.py  pyproject.toml  requirements.txt  run_loader.py  write_to_db.py
api_example/: api_reader.py
data_loader_project/: README.md  data_loader.py  run_loader.py  test_validation.py
etl/: __init__.py  extract.py  load.py  main.py  transform.py  validate.py
experiments/src/: write_to_db.py
notebooks/: EDA.ipynb
parse_example/: data_parser.py  parser_output.txt
src/: write_to_db.py
